--- a/index.html
+++ b/index.html
@@ -17,13 +17,11 @@
       box-shadow: 0 0 12px rgba(0,0,0,0.1);
       max-width: 500px;
       margin: auto;
-      display: none;
     }
-    input[type="number"], input[type="text"] {
+    input[type="number"] {
       padding: 10px;
-      width: 80%;
+      width: 100px;
       font-size: 1.2em;
-      margin-bottom: 10px;
     }
     button {
       padding: 10px 25px;
@@ -35,17 +33,9 @@
     .hidden { display: none; }
     #timer { font-weight: bold; color: #444; margin: 10px 0; }
     #summary { text-align: left; margin-top: 20px; }
-    ul { text-align: left; padding-left: 20px; }
   </style>
 </head>
 <body>
-
-  <div id="startScreen">
-    <h2>Welcome to the Math Quiz!</h2>
-    <input type="text" id="playerName" placeholder="Enter your name">
-    <br><br>
-    <button onclick="startQuiz()">Start Quiz</button>
-  </div>
 
   <div class="container">
     <h2>Math Quiz Game 🧠</h2>
@@ -59,49 +49,18 @@
     <p id="feedback" class="hidden"></p>
     <div id="endMessage" class="hidden"></div>
     <div id="summary" class="hidden"></div>
-    <div id="leaderboard" class="hidden"></div>
   </div>
 
-  <!-- Firebase SDK -->
-  <script src="https://www.gstatic.com/firebasejs/9.22.0/firebase-app-compat.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/9.22.0/firebase-firestore-compat.js"></script>
   <script>
-    const firebaseConfig = {
-      apiKey: "AIzaSyA1pRf1kRA6bdbyibKMzES-Q8C0h08gPRI",
-      authDomain: "mathquizbysf.firebaseapp.com",
-      projectId: "mathquizbysf",
-      storageBucket: "mathquizbysf.appspot.com",
-      messagingSenderId: "844706232442",
-      appId: "1:844706232442:web:f76abaf4b96817c386e3c3",
-      measurementId: "G-NRWPMLGHZK"
-    };
-
-    firebase.initializeApp(firebaseConfig);
-    const db = firebase.firestore();
-  </script>
-
-  <script>
-    let round = 1;
+    let round = 1; // 1: Addition, 2: Subtraction, 3: Multiplication
     let questionNumber = 0;
     let currentAnswer = 0;
     let startTime = 0;
     let timerInterval;
-    let player = "";
 
+    // Tracking per round
     const roundTimes = [[], [], []];
     const incorrectCounts = [0, 0, 0];
-
-    function startQuiz() {
-      const input = document.getElementById("playerName").value.trim();
-      if (!input) {
-        alert("Please enter your name to start.");
-        return;
-      }
-      player = input;
-      document.getElementById("startScreen").style.display = "none";
-      document.querySelector(".container").style.display = "block";
-      generateProblem();
-    }
 
     function getRandomInt(min, max) {
       return Math.floor(Math.random() * (max - min + 1)) + min;
@@ -138,6 +97,7 @@
       document.getElementById("feedback").classList.add("hidden");
       document.getElementById("answer").value = "";
       updateRoundInfo();
+
       startTimer();
     }
 
@@ -157,7 +117,6 @@
     }
 
     function submitAnswer() {
-      if (round > 3) return;  // Prevent submission after quiz is done
       const userInput = parseInt(document.getElementById("answer").value);
       const feedback = document.getElementById("feedback");
 
@@ -201,71 +160,34 @@
       return (total / arr.length).toFixed(2);
     }
 
-    async function endQuiz() {
-  clearInterval(timerInterval);
+    function endQuiz() {
+      document.getElementById("endMessage").innerHTML = `<h3>🎉 You've completed all 3 rounds!</h3>`;
+      document.getElementById("endMessage").classList.remove("hidden");
+      document.getElementById("question").classList.add("hidden");
+      document.getElementById("answer").classList.add("hidden");
+      document.querySelector("button").classList.add("hidden");
+      document.getElementById("progress").classList.add("hidden");
+      document.getElementById("roundInfo").classList.add("hidden");
+      document.getElementById("timer").classList.add("hidden");
 
-  // Hide quiz elements
-  document.getElementById("question").style.display = "none";
-  document.getElementById("answer").style.display = "none";
-  document.querySelector("button").style.display = "none";
-  document.getElementById("progress").style.display = "none";
-  document.getElementById("roundInfo").style.display = "none";
-  document.getElementById("timer").style.display = "none";
-  document.getElementById("feedback").style.display = "none";
-
-  // Show completion message
-  document.getElementById("endMessage").innerHTML = `<h3>🎉 ${player}, you've completed all 3 rounds!</h3>`;
-  document.getElementById("endMessage").classList.remove("hidden");
-
-  const roundNames = ["Addition", "Subtraction", "Multiplication"];
-  let summaryHTML = `<h4>📊 Your Performance Summary:</h4><ul>`;
-  let leaderboardHTML = `<h4>🏆 Leaderboards:</h4>`;
-
-  for (let i = 0; i < 3; i++) {
-    const avgTime = parseFloat(average(roundTimes[i]));
-    summaryHTML += `
-      <li>
-        <strong>${roundNames[i]}:</strong><br>
-        ⏱️ Avg Time: ${avgTime}s<br>
-        ❌ Incorrect Attempts: ${incorrectCounts[i]}
-      </li><br>`;
-
-    // Save best time to Firestore
-    const docRef = db.collection("leaderboards").doc(roundNames[i]);
-    const docSnap = await docRef.get();
-    const data = docSnap.exists() ? docSnap.data() : {};
-    const currentBest = data[player] ?? Infinity;
-
-    if (avgTime < currentBest) {
-      await docRef.set({ [player]: avgTime }, { merge: true });
+      const roundNames = ["Addition", "Subtraction", "Multiplication"];
+      let summaryHTML = `<h4>📊 Your Performance Summary:</h4><ul>`;
+      for (let i = 0; i < 3; i++) {
+        summaryHTML += `
+          <li>
+            <strong>${roundNames[i]}:</strong><br>
+            ⏱️ Avg Time: ${average(roundTimes[i])} seconds<br>
+            ❌ Incorrect Attempts: ${incorrectCounts[i]}
+          </li><br>`;
+      }
+      summaryHTML += `</ul>`;
+      document.getElementById("summary").innerHTML = summaryHTML;
+      document.getElementById("summary").classList.remove("hidden");
     }
 
-    // Merge current player's new best into data and sort for leaderboard
-    const allData = { ...data, [player]: Math.min(currentBest, avgTime) };
-    const sorted = Object.entries(allData).sort((a, b) => a[1] - b[1]);
-    const top5 = sorted.slice(0, 5);
-
-    leaderboardHTML += `<strong>${roundNames[i]}</strong><ul>`;
-    top5.forEach(([name, time]) => {
-      leaderboardHTML += `<li>${name}: ${time}s</li>`;
-    });
-    leaderboardHTML += `</ul>`;
-  }
-
-  summaryHTML += `</ul>`;
-
-  document.getElementById("summary").innerHTML = summaryHTML;
-  document.getElementById("summary").classList.remove("hidden");
-
-  document.getElementById("leaderboard").innerHTML = leaderboardHTML;
-  document.getElementById("leaderboard").classList.remove("hidden");
-
-  // Prevent further submissions
-  round = 4;
-}
-
-
-</script>
+    // Start game
+    generateProblem();
+  </script>
 
 </body>
 </html>
